--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: DEPLOY TO STAGING
 on:
   push:
-    branches:
-      - develop
 jobs:
-  build-app:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
