--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,31 @@
-name: DEPLOY TO STAGING
+name: CI
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
+    branches:
+      - '*'
+      - '*/*'
+      - '**'
+      - '!master'
+  pull_request:
+    branches: [ "master" , "develop"]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@master
-      - name: Installing project dependencies
-      - run: npm install
-      - name: Building the project
-      - run: npm run build
+      - name: Check out code
+      - uses: actions/checkout@v2
+
+      - name: Set up node 
+        uses: actions/setup-node@v1
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests 
+        run: npm test
+      
+      - name: Build
+        run : npm build
